--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="row">
                 <div class="col-lg-7 order-lg-1 order-2 banner-content">
                     <h2 class="text-uppercase position-relative">Hello</h2>
-                    <h1 class="text-uppercase">I am John Smith</h1>
-                    <h5 class="text-uppercase"> senior Frontend Designer</h5>
+                    <h1 class="text-uppercase">I am RANA BILAL JAVED</h1>
+                    <h5 class="text-uppercase"> senior Frontend developer</h5>
                     <div class="mt-5">
                         <a class="main-btn primary-btn" href="#">Hire Me</a>
                         <a class="main-btn secondary-btn ms-4" href="#">Get CV</a>
@@ -411,7 +411,52 @@
     </section>
     <!-- blog -->
 
-
+    <!-- footer  -->
+    <section id="Contact" class="footer-wrapper mt-3 mt-md-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 new-letter text-center px-4">
+                    <div>
+                        <h3 class="text-white">get update from anywhere</h3>
+                        <p class="text-white">Bearing Void gathering light light his eavening unto dont afraid. </p>
+                        <form class="row g-3 justify-content-center mt-4">
+                            <div class="col col-sm-6 col-lg-4">
+                                <input type="email" placeholder="Email address" class="form-control">
+                            </div>
+                            <div class="col col-auto">
+                                <button type="submit"
+                                    class="main-btn secondary-btn border-white mb-3">get-started</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container mt-5">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <div class="footer-logo mb-3 mb-md-0">
+                        <img src="images/logo.png" class="img-fluid" alt="footer-logo">
+                    </div>
+                    <div class="my-4 social-icons">
+                        <ul class="list-unstyled d-flex justify-content-center align-items-center">
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></1i>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></1i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-12">
+                    <p class="footer-text text-center my-2">Copyright © 2024 All rights reserved | This template
+                        is made with <i class="far fa-heart"></i> by <a href="#">RANA BILAL JAVED</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer  -->
 
 
 
