--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <!-- blog -->
 
     <!-- footer  -->
-    <section id="Contact" class="footer-wrapper mt-3 mt-md-0">
+    <section id="contact" class="footer-wrapper mt-3 mt-md-0">
         <div class="container">
             <div class="row">
                 <div class="col-12 new-letter text-center px-4">
